# libre-lesson

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yaml
assets/: info.txt
src/: drawing.rs  main.rs  page1.rs  page2.rs  page3.rs  page4.rs  variables.rs
src/drawing/: boundcircle.rs  boundline.rs  boundlocation.rs  boundpoint.rs  boundtracker.rs  cameras.rs  mod.rs  pages.rs
src/variables/: binding.rs  debug.rs  group.rs  lambda.rs  list.rs  mod.rs  variable.rs
