[package]
name = "fourier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8.1"}
bevy_egui = "0.16.0"
bevy_prototype_lyon = "0.6.0"
num-traits = "0.2.15"
strum = "0.24.1"
strum_macros = "0.24.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3
